WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132104
[MediaStream] .ended shouldn't be part of MediaStream IDL
https://bugs.webkit.org/show_bug.cgi?id=132104
Summary
[MediaStream] .ended shouldn't be part of MediaStream IDL
Praveen Jadhav
Reported
2014-04-23 20:42:14 PDT
.ended attribute won't be part of MediaStream IDL from next release(
http://dev.w3.org/2011/webrtc/editor/getusermedia.html#mediastream
). Implementation should be deprecated in WebKit.
Attachments
Patch
(13.61 KB, patch)
2014-04-25 02:40 PDT
,
Praveen Jadhav
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Praveen Jadhav
Comment 1
2014-04-25 02:40:17 PDT
Created
attachment 230155
[details]
Patch .ended implementation is cleaned up. Not sure if this is the right way though.
WebKit Commit Bot
Comment 2
2014-04-27 19:38:14 PDT
Comment on
attachment 230155
[details]
Patch Clearing flags on attachment: 230155 Committed
r167868
: <
http://trac.webkit.org/changeset/167868
>
WebKit Commit Bot
Comment 3
2014-04-27 19:38:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug