Source/WebCore/Modules/mediastream/MediaStream.h
@@ -67,11 +67,8 @@ public:
     Vector<RefPtr<MediaStreamTrack>> getAudioTracks() const { return m_audioTracks; }
     Vector<RefPtr<MediaStreamTrack>> getVideoTracks() const { return m_videoTracks; }
 
-    bool ended() const;
-    void setEnded();
     PassRefPtr<MediaStream> clone();
 
-    DEFINE_ATTRIBUTE_EVENT_LISTENER(ended);
     DEFINE_ATTRIBUTE_EVENT_LISTENER(addtrack);
     DEFINE_ATTRIBUTE_EVENT_LISTENER(removetrack);
 
@@ -109,7 +106,6 @@ private:
 
     // MediaStreamPrivateClient
     virtual void trackDidEnd() override final;
-    virtual void streamDidEnd() override final;
     virtual void setStreamIsActive(bool) override final;
     virtual void addRemoteSource(MediaStreamSource*) override final;
     virtual void removeRemoteSource(MediaStreamSource*) override final;
